<resources>
    <string name="app_name">Seminários</string>
    <string name="title_activity_aluno_seminarios">Seminários</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_student_seminars">Seminários</string>
    <string name="title_activity_professor_seminars">Seminários</string>

    <string name="seminar_home">Todos os Seminários</string>
    <string name="seminar_create">Criar Seminário</string>
    <string name="seminar_dashboard">Seminários Assisitidos</string>
    <string name="seminar_preferences">Conta</string>

    <string name="seminar_validate">Validar Presença</string>
    <string name="seminar_new_professor">Cadastrar Professor</string>

    <string name="seminar_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dummy_short_seminar_description">This should be a small two-line short description of the seminar in this card. If the description gets too big then...</string>
</resources>
